Fixed overflow bug

--- a/public/src/styles/main.scss
+++ b/public/src/styles/main.scss
@@ -28,7 +28,6 @@
     box-sizing: border-box;
     list-style: none;
     @include scrollbar(16px, black, whitesmoke);
-    overflow: auto;
     font-family: Pixelmix;
 }
 
