--- a/public/src/styles/partials/_editor.scss
+++ b/public/src/styles/partials/_editor.scss
@@ -252,7 +252,6 @@ canvas.asset {
 
   .viewer {
     width: 50%;
-    max-width: 300px;
     border-bottom: 4px black dashed;
     display: flex;
     flex-direction: column;
