--- a/public/src/styles/partials/_landing.scss
+++ b/public/src/styles/partials/_landing.scss
@@ -1,6 +1,5 @@
 #landing-container {
     display: flex;
-    margin-top: 3.6rem;
     height: 90vh;
     overflow-x: hidden;
 
@@ -29,6 +28,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
+        overflow: initial;
 
         h1 {
             font-size: 3em;
